domains/gpu-serving/blueprints/llmd-hyperpod/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llmd-route
  namespace: llmd-validation
spec:
  parentRefs:
    - name: infra-inference-scheduling-inference-gateway
      namespace: llmd-validation
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-inference-scheduling
          port: 8000
